tests/ui-pre_1.39/structopt_empty_attr.stderr
error: expected parentheses after `clap`
  --> $DIR/structopt_empty_attr.rs:14:7
   |
14 |     #[clap]
   |       ^^^^
